--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@
 
 # Ignore application configuration
 /config/application.yml
+
+# React on Rails
+npm-debug.log*
+node_modules
+
+# Generated js bundles
+/public/webpack/*
